--- a/README.Rmd
+++ b/README.Rmd
@@ -4,23 +4,23 @@ output: github_document
 
 <!-- README.md is generated from README.Rmd. Please edit that file -->
 
-[![Travis-CI Build Status](https://travis-ci.org/chadhazlett/sensemakr.svg?branch=master)](https://travis-ci.org/chadhazlett/sensemakr)
-
 ```{r, echo = FALSE}
 knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>",
-  fig.path = "tools/README-"
+  fig.path = "man/figures/figures-"
 )
 ```
 
-# sensemakr
+## sensemakr <img src="man/figures/sensemakr-logo-small.png" align="right" />
+
+[![Travis-CI Build Status](https://travis-ci.org/chadhazlett/sensemakr.svg?branch=master)](https://travis-ci.org/chadhazlett/sensemakr)
 
 Practitioners of causal inference have a wide variety of tools to assess the influence of observed confounders on their effect estimates. sensemakr makes it easy to assess the influence of *un*observed confounders, bound effect estimates, and visually plot confounding. 
 
 The package defines a custom `sensemakr` class that enables plot and print methods so that the user can make sense of unobserved confounding.
 
-## Installation
+### Installation
 
 You can install sensemakr from github with:
 
@@ -29,10 +29,9 @@ You can install sensemakr from github with:
 devtools::install_github("chadhazlett/sensemakr")
 ```
 
-## Example
+### Example
 
 Below is a basic example of the functionality in the sensemakr package
-
 
 ```{r example}
 library(sensemakr)
