--- a/README.Rmd
+++ b/README.Rmd
@@ -11,7 +11,7 @@ knitr::opts_chunk$set(
   fig.path = "man/figures/figures-"
 )
 ```
-
+## sensemakr <img src="tools/sensemakr-logo-small.png" align="right" />
 
 [![Travis-CI Build Status](https://travis-ci.org/chadhazlett/sensemakr.svg?branch=master)](https://travis-ci.org/chadhazlett/sensemakr)
 
