--- a/README.Rmd
+++ b/README.Rmd
@@ -14,5 +14,7 @@ knitr::opts_chunk$set(
 ## sensemakr <img src="tools/sensemakr-logo-small.png" align="right" />
 
 [![Travis-CI Build Status](https://travis-ci.org/chadhazlett/sensemakr.svg?branch=master)](https://travis-ci.org/chadhazlett/sensemakr)
+[![Build status](https://ci.appveyor.com/api/projects/status/utoc0803j4fxoje3?svg=true)](https://ci.appveyor.com/project/carloscinelli/sensemakr)
+
 
 Under development, come back soon! 
