--- a/README.Rmd
+++ b/README.Rmd
@@ -33,5 +33,40 @@ To install the GitHub version you need to have the package `devtools` installed.
 devtools::install_github("chadhazlett/sensemakr")
 ```
 
+# Basic usage
 
+
+```{r, fig.width = 10, fig.height=8, collapse=T}
+# loads package
+library(sensemakr)
+
+# loads dataset
+data("darfur")
+
+# runs regression model
+model <- lm(peacefactor ~ directlyharmed + age + farmer_dar + herder_dar +
+                         pastvoted + hhsize_darfur + female + village, data = darfur)
+
+# runs sensemakr for sensitivity analysis
+sensitivity <- sensemakr(model, treatment = "directlyharmed",
+                               benchmark_covariates = "female",
+                               kd = 1:3)
+# short description of results
+sensitivity
+
+# long description of results
+summary(sensitivity)
+
+# plot bias contour of point estimate
+plot(sensitivity)
+
+# plot bias contour of t-value
+plot(sensitivity, sensitivity.of = "t-value")
+
+# plot extreme scenario
+plot(sensitivity, type = "extreme", cex.legend = 1)
+
+# latex code for sensitivity table
+ovb_minimal_reporting(sensitivity)
+```
 
