--- a/README.Rmd
+++ b/README.Rmd
@@ -21,6 +21,10 @@ knitr::opts_chunk$set(
 
 Check out the Robustness Value Shiny App at: https://carloscinelli.shinyapps.io/robustness_value/
 
+# Details
+
+For theoretical details, [please see the full paper](https://www.researchgate.net/publication/322509816_Making_Sense_of_Sensitivity_Extending_Omitted_Variable_Bias). A step-by-step hands on vignette will be ready soon.
+
 # CRAN
 
 The package was just submitted to CRAN, and it will available soon.
@@ -32,6 +36,7 @@ To install the GitHub version you need to have the package `devtools` installed.
 ```{r, eval=FALSE}
 devtools::install_github("chadhazlett/sensemakr")
 ```
+
 
 # Basic usage
 
