include downloads badge

--- a/README.Rmd
+++ b/README.Rmd
@@ -17,6 +17,7 @@ knitr::opts_chunk$set(
 [![Build status](https://ci.appveyor.com/api/projects/status/utoc0803j4fxoje3?svg=true)](https://ci.appveyor.com/project/carloscinelli/sensemakr)
 [![CRAN\_Status\_Badge](http://www.r-pkg.org/badges/version/sensemakr)](https://cran.r-project.org/package=sensemakr)
 [![Coverage status](https://codecov.io/gh/chadhazlett/sensemakr/branch/master/graph/badge.svg)](https://codecov.io/github/chadhazlett/sensemakr?branch=master)
+![Donwloads](http://cranlogs.r-pkg.org/badges/sensemakr)
 
 # News
 
@@ -28,13 +29,19 @@ For theoretical details, [please see the full paper](https://www.researchgate.ne
 
 # CRAN
 
-The package was just submitted to CRAN, and it shoud be available soon.
+The package has just been released on CRAN! To install the current CRAN version run:
+
+```{r, eval = FALSE}
+install.packages("sensemakr")
+```
+
 
 # How to install the development version from GitHub
 
-To install the GitHub version you need to have the package `devtools` installed.
+To install the development version on GitHub make sure you have the package `devtools` installed.
 
 ```{r, eval=FALSE}
+# install.packages(devtools) 
 devtools::install_github("chadhazlett/sensemakr")
 ```
 
