- better default for extreme plot

--- a/README.Rmd
+++ b/README.Rmd
@@ -13,10 +13,10 @@ knitr::opts_chunk$set(
 ```
 ## sensemakr <img src="tools/sensemakr-logo-small.png" align="right" />
 
-[![Travis-CI Build Status](https://travis-ci.org/chadhazlett/sensemakr.svg?branch=master)](https://travis-ci.org/chadhazlett/sensemakr) 
+[![Travis-CI Build Status](https://travis-ci.org/carloscinelli/sensemakr.svg?branch=master)](https://travis-ci.org/carloscinelli/sensemakr) 
 [![Build status](https://ci.appveyor.com/api/projects/status/utoc0803j4fxoje3?svg=true)](https://ci.appveyor.com/project/carloscinelli/sensemakr)
 [![CRAN\_Status\_Badge](http://www.r-pkg.org/badges/version/sensemakr)](https://cran.r-project.org/package=sensemakr)
-[![Coverage status](https://codecov.io/gh/chadhazlett/sensemakr/branch/master/graph/badge.svg)](https://codecov.io/github/chadhazlett/sensemakr?branch=master)
+[![Coverage status](https://codecov.io/gh/carloscinelli/sensemakr/branch/master/graph/badge.svg)](https://codecov.io/github/carloscinelli/sensemakr?branch=master)
 ![Donwloads](http://cranlogs.r-pkg.org/badges/sensemakr)
 
 # News
@@ -49,7 +49,7 @@ devtools::install_github("chadhazlett/sensemakr")
 # Basic usage
 
 
-```{r basic-usage, fig.width = 6, fig.height=6, fig.align='center', collapse=T}
+```{r basic-usage, fig.align='center', collapse=T}
 # loads package
 library(sensemakr)
 
