--- a/README.Rmd
+++ b/README.Rmd
@@ -22,15 +22,18 @@ knitr::opts_chunk$set(
 [![Donwloads](https://cranlogs.r-pkg.org/badges/sensemakr)](https://cran.r-project.org/package=sensemakr)
 <!-- badges: end -->
 
-sensemakr implements a suite of sensitivity analysis tools  that extends the traditional omitted variable bias framework and makes it easier  to understand the impact of omitted variables in regression models, as discussed in [Cinelli, C. and Hazlett, C. (2020), "Making Sense of Sensitivity: Extending Omitted Variable Bias." Journal of the Royal Statistical Society, Series B (Statistical Methodology).]( https://doi.org/10.1111/rssb.12348) 
+sensemakr implements a suite of sensitivity analysis tools  that extends the traditional omitted variable bias framework and makes it easier  to understand the impact of omitted variables in regression models, as discussed in [Cinelli, C. and Hazlett, C. (2020) "Making Sense of Sensitivity: Extending Omitted Variable Bias." Journal of the Royal Statistical Society, Series B (Statistical Methodology).]( https://doi.org/10.1111/rssb.12348) 
 
 # News
 
-Check out the Robustness Value Shiny App at: https://carloscinelli.shinyapps.io/robustness_value/
+- Check out the Robustness Value Shiny App at: https://carloscinelli.shinyapps.io/robustness_value/
+
+- A stata version of the packge is coming soon.
 
 # Details
 
-For theoretical details, [please see the full paper](https://www.researchgate.net/publication/322509816_Making_Sense_of_Sensitivity_Extending_Omitted_Variable_Bias). A step-by-step hands on vignette will be ready soon.
+For theoretical details, [please see the full paper](https://www.researchgate.net/publication/322509816_Making_Sense_of_Sensitivity_Extending_Omitted_Variable_Bias). A step-by-step hands on vignette will be ready soon. 
+
 
 # CRAN
 
