- test author in vignette

--- a/vignettes/sensemakr.Rmd
+++ b/vignettes/sensemakr.Rmd
@@ -1,6 +1,7 @@
 ---
 title: "sensemakr"
 output: rmarkdown::html_vignette
+author: Carlos Cinelli and Chad Hazlett
 vignette: >
   %\VignetteIndexEntry{sensemakr}
   %\VignetteEngine{knitr::rmarkdown}
