--- a/vignettes/informal_benchmarking.Rmd
+++ b/vignettes/informal_benchmarking.Rmd
@@ -25,7 +25,7 @@ embed_png <- function(path, dpi = NULL) {
     "<img src='", path, "'",
     " width=", round(meta$dim[1] / (meta$dpi[1] / 96)),
     " height=", round(meta$dim[2] / (meta$dpi[2] / 96)),
-    " />"
+    " style='display: block; margin: auto;'/>"
   ))
 }
 ```
@@ -127,12 +127,13 @@ add_bound_to_contour(r2dz.x = r2dx,
 
 As we can see, the results of the informal benchmark are different from what we expected. The informal benchmark point is still far away from zero, and this would lead an investigator to incorrectly conclude that an unobserved confounder $Z$ "not unlike $X$" is not sufficient to explain away the observed effect. Moreover, this incorrect conclusion occurs despite *correctly* assuming that: (i) $Z$ and $X$ have the same strength of association with $D$ and $Y$; and, (ii) $Z$ is independent of $X$. Why does this happen?
 
-As explained in Section 6.1 of [Cinelli and Hazlett (2020)](https://doi.org/10.1111/rssb.12348), there are two problems affecting informal benchmarks in this setting. First, we have to make an adjustment of baseline variance to be explained, since the sensitivity parameters consider the partial $R^2$ of $Z$ with the outcome, after taking into account what is already explained by $X$. Second, note that, although $Z$ is ideed independent of $X$, $Z$ is not independent of $X$ *given* $D$, because $D$ is a collider (Pearl, 2009). This distorts the observed quantities of $X$ that are being used for benchmarking.
+As explained in Section 6.1 of [Cinelli and Hazlett (2020)](https://doi.org/10.1111/rssb.12348), there are two problems affecting informal benchmarks in this setting. First, we have to make an adjustment of baseline variance to be explained, since the sensitivity parameters consider the partial $R^2$ of $Z$ with the outcome, after taking into account what is already explained by $X$. Second, consider the DAG of our structural model:
 
 ```{r, echo=FALSE}
 embed_png(path = "collider.png", dpi = 400)
 ```
 
+That is, although $Z$ is *marginally* independent of $X$, note that $Z$ is not *conditionally* independent of $X$, *given* $D$, because $D$ is a *collider* (Pearl, 2009). This distorts the observed quantities of $X$ that are being used for benchmarking.
 
 ## Formal bounds
 
