- improvements in add_bound_to_contour

--- a/vignettes/sensemakr.Rmd
+++ b/vignettes/sensemakr.Rmd
@@ -34,6 +34,10 @@ model <- lm(peacefactor ~ directlyharmed + age + farmer_dar + herder_dar +
 sensitivity <- sensemakr(model, treatment = "directlyharmed",
                                benchmark_covariates = "female",
                                kd = 1:3)
+plot(sensitivity)
+add_bound_to_contour(model, benchmark_covariates = "female", kd = 20, ky = 1)
+add_bound_to_contour(model, treatment = "directlyharmed", benchmark_covariates = "female", kd = 20, ky = 1)
+
 ovb_minimal_reporting(sensitivity, format = "html")
 ```
 
