--- a/README.Rmd
+++ b/README.Rmd
@@ -93,3 +93,8 @@ plot(sensitivity, type = "extreme")
 ovb_minimal_reporting(sensitivity)
 ```
 
+```{r, results='asis'}
+# html code for sensitivity table
+ovb_minimal_reporting(sensitivity, format = "html")
+```
+
